--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^1.3.11",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-reanimated": "^3.15.1",
     "react-native-svg": "^15.6.0"
   },
   "devDependencies": {
