--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-reanimated": "^3.15.1",
     "react-native-svg": "^15.6.0",
     "react-native-vision-camera": "^4.5.3",
+    "react-native-worklets-core": "^1.3.3",
     "vision-camera-dynamsoft-document-normalizer": "^3.2.2"
   },
   "devDependencies": {
